Tests/RunCMake/CMP0125/CMP0125-find_library-OLD.cmake
@@ -1,0 +1,6 @@
+
+cmake_policy(SET CMP0125 OLD)
+
+enable_language(C)
+
+include(CMP0125-find_library-Common.cmake)
